make login works
