# api/handler.go
@@ -2,6 +2,8 @@ package api
 
 import (
 	"net/http"
+	"strconv"
+	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
@@ -49,4 +51,34 @@ func (si serverImpl) AuthRegister(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusCreated)
+}
+
+// Login
+// (POST /auth/login)
+func (si serverImpl) AuthLogin(w http.ResponseWriter, r *http.Request) {
+	var request AuthLoginRequest
+	if err := parseJSON(r, &request); err != nil {
+		si.deliverErr(w, r, err)
+		return
+	}
+
+	user, err := si.app.AuthEmail(r.Context(), request.Email, request.Password)
+	if err != nil {
+		si.deliverErr(w, r, err)
+		return
+	}
+
+	_, tk, err := tokenAuth.Encode(map[string]interface{}{
+		"sub": strconv.Itoa(int(user.ID())),
+		"iat": time.Now().Unix(),
+		"exp": time.Now().Add(10 * time.Minute).Unix(),
+	})
+	if err != nil {
+		si.deliverErr(w, r, err)
+		return
+	}
+
+	sendJSON(w, http.StatusOK, AuthLoginResponse{
+		AccessToken: tk,
+	})
 }
