# api/types.gen.go
@@ -3,6 +3,17 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package api
 
+// AuthLoginRequest defines model for AuthLoginRequest.
+type AuthLoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+// AuthLoginResponse defines model for AuthLoginResponse.
+type AuthLoginResponse struct {
+	AccessToken string `json:"access_token"`
+}
+
 // AuthRegisterRequest defines model for AuthRegisterRequest.
 type AuthRegisterRequest struct {
 	Email           string `json:"email"`
@@ -34,6 +45,9 @@ type ValidationError struct {
 
 // ValidationErrorParams defines model for ValidationErrorParams.
 type ValidationErrorParams = map[string]interface{}
+
+// AuthLoginJSONRequestBody defines body for AuthLogin for application/json ContentType.
+type AuthLoginJSONRequestBody = AuthLoginRequest
 
 // AuthRegisterJSONRequestBody defines body for AuthRegister for application/json ContentType.
 type AuthRegisterJSONRequestBody = AuthRegisterRequest
